	way ... so we only set up attribute info in the dictionary when we
	actually need it.  Account 'Number' methods and dictionary keys changed
	to be account 'ID' instead ... in accordance with MacOS-X usage.
	Documented the class.
	* Source/NSData.m: ([-writeToFile:atomically:]) implement workaround
	for bug in windoze implementation of rename()

2002-09-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: MacOS-X ([componentsToDisplayForPath:]) and
	([displayNameAtPath:]) methods implemented.  Creation date added.
	* Source/NSString.m: More alterations to GNUstep extension methods
	to make their names consistent with other methods.
	Q. Should we deprecate/remove them entirely?
	* Tools/gsdoc.m: Update for changes to extension methods... though
	this tool has been deprecated for some time now, so perhaps we
	should remove it?

2002-09-13  Adam Fedor  <fedor@gnu.org>

	* Source/cifframe.m (cifframe_guess_struct_size): Recurse if
	element contains structures.
	(cifframe_from_info): Alloc room for return value even if caller
	doesn't use it.

Thu Sep 12 11:02:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSObject.m ([+_becomeMultiThreaded:]): Fixed typo - this
	method was declared to take a 'NSNotification' rather than a
	'NSNotification *' argument.

2002-09-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Double locking check fix
	* Source/NSFileManager.m: Double locking check fix
	Fixes contributed by David Ayers <d.ayers@inode.at>

2002-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSIArray.h: Minor optimisation
	* Headers/gnustep/unicode/gsm0338.h: Correct unicode to gsm table
	* Source/Unicode.m: Correct gsm conversion and optimise unicode to
	8-bit charaacter conversion for other character sets. Also correct
	lossy/non-lossy conversion using iconv.

2002-08-30  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.0

2002-08-30  Richard Frith-Macdonald <rfm@gnu.org>
